--- a/scss/sections/_projects.scss
+++ b/scss/sections/_projects.scss
@@ -19,9 +19,6 @@
   position: relative;
 }
 
-//.projects .container .projects-img article:nth-child(-n+3) {
-//  margin-bottom: 1.5rem;
-//}
 
 .projects .container .projects-img article .projects-text p {
   display: flex;
@@ -53,6 +50,8 @@
   justify-content: center;
 
   transition: settings.$global-transition;
+
+  text-align: center;
 }
 
 .projects .container .projects-img article .projects-text::before {
